--- a/Assignment.html
+++ b/Assignment.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Write title here.</title>
+        <title>Outside in the Upper Left</title>
     </head>
     <body>
+        <p>Paragraph</p>
+        <h1>Heading</h1>
+        <h3>Heading</h3>
+        <h6>Heading</h6>
     </body>
 </html>
