Created HTML Documents folder and content
Added HTML documents folder and potatoes website

--- a/Assignment.html
+++ b/Assignment.html
@@ -2,11 +2,21 @@
 <html lang="en">
     <head>
         <title>Outside in the Upper Left</title>
+        <nav>
+            <a href="Assignment.html">Home</a>
+            <a href="Dog.html">Dog Picture</a>
+            <a href="Dog_Video.html">Dog Video</a>
+        </nav>
     </head>
     <body>
-        <p>Paragraph</p>
-        <h1>Heading</h1>
-        <h3>Heading</h3>
-        <h6>Heading</h6>
+        <p></p>
+        <h1></h1>
+        <h3></h3>
+        <h6></h6>
+        <a href="Assignment.html">Home</a>
+        <a href="https://www.petplan.co.uk/images/breed-info/dachshund/dachshund_vital-stats_petplan.webp">Dachshund Pic</a>
+        <p>Here is a quote about dogs:</p>
+        <blockquote>Dogs are like wolves but nicer.</blockquote>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/EbYLJ0W6OD0"></iframe>
     </body>
 </html>
