Created HTML_5 and linked CSS_2

--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -4,6 +4,22 @@
         <link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
     </head>
     <body>
-        <p>paragraph text here</p>
+        <h2>Page Title</h2>
+        <p>I am &#60; 100 years old</p>
+        <p>The ramen and sake costs &#165;3000</p>
+        <ul>
+            <li>Head</li>
+            <li>Shoulders</li>
+            <li>Knees</li>
+            <li>Toes</li>
+            <li>Knees</li>
+            <li>Toes</li>
+        </ul>
+        <ol>
+            <li>Eyes</li>
+            <li>Ears</li>
+            <li>Mouth</li>
+            <li>Nose</li>
+        </ol>
     </body>
 </html>
