Added images and updated index to link them

--- a/Basic_HTML_and_CSS/Website_1_project/index.html
+++ b/Basic_HTML_and_CSS/Website_1_project/index.html
@@ -31,15 +31,114 @@
         <div id="gallery">
             <h1>Gallery</h1>
             <div>
-                <!-- PHOTO CONTAINER -->
-                <div>
-                    <div>
-                        <div>
-                            <h3>Click to Enlarge</h3>
+                <!-- PHOTO CONTAINER 1-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_1.jpeg" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
                         </div>
                     </div>
-
                 </div>
+                <!--END PHOTO CONTAINER 1-->
+
+                <!-- PHOTO CONTAINER 2-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_2.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 2-->
+
+                <!-- PHOTO CONTAINER 3-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_3.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 3-->
+
+                <!-- PHOTO CONTAINER 4-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_4.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 4-->
+
+                <!-- PHOTO CONTAINER 5-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_5.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 5-->
+
+                <!-- PHOTO CONTAINER 6-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_6.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 6-->
+
+                <!-- PHOTO CONTAINER 7-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_7.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 7-->
+
+                <!-- PHOTO CONTAINER 8-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_8.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 8-->
+
+                <!-- PHOTO CONTAINER 9-->
+                <div class="photo-container">
+                    <div class="photo">
+                        <img src="./images/thumb/thumbnail_9.jfif" alt="mountain"> 
+                        <div class="photo-overlay">
+                            <h3 class="white-head">Click to Enlarge</h3>
+                            <p>PNW Peaks</p>
+                        </div>
+                    </div>
+                </div>
+                <!--END PHOTO CONTAINER 9-->
+
             </div>
         </div>
         <!-- END GALLERY -->
