--- a/Basic_HTML_and_CSS/Website_1_project/index.html
+++ b/Basic_HTML_and_CSS/Website_1_project/index.html
@@ -46,7 +46,7 @@
                 <!-- PHOTO CONTAINER 2-->
                 <div class="photo-container">
                     <div class="photo">
-                        <img src="./images/thumb/thumbnail_2.jfif" alt="mountain"> 
+                        <img src="./images/thumb/thumbnail_2.jfif" width="100" alt="mountain"> 
                         <div class="photo-overlay">
                             <h3 class="white-head">Click to Enlarge</h3>
                             <p>PNW Peaks</p>
@@ -58,7 +58,7 @@
                 <!-- PHOTO CONTAINER 3-->
                 <div class="photo-container">
                     <div class="photo">
-                        <img src="./images/thumb/thumbnail_3.jfif" alt="mountain"> 
+                        <img src="./images/thumb/thumbnail_3.jfif" width="100" alt="mountain"> 
                         <div class="photo-overlay">
                             <h3 class="white-head">Click to Enlarge</h3>
                             <p>PNW Peaks</p>
@@ -70,7 +70,7 @@
                 <!-- PHOTO CONTAINER 4-->
                 <div class="photo-container">
                     <div class="photo">
-                        <img src="./images/thumb/thumbnail_4.jfif" alt="mountain"> 
+                        <img src="./images/thumb/thumbnail_4.jfif" width="100" alt="mountain"> 
                         <div class="photo-overlay">
                             <h3 class="white-head">Click to Enlarge</h3>
                             <p>PNW Peaks</p>
