--- a/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
@@ -84,7 +84,7 @@
         <!-- FOOTER -->
         <div>
             <footer>
-                <p>Author: Monta&#241ero Jones</p>
+                <p>Author: Monta&#ero Jones</p>
                 <p><a href="mailto:hege@example.com">hege@example.com</a></p>
             </footer>
         </div>
