Added CSS for moving squares on basic css

--- a/Basic_css_demo_1.html
+++ b/Basic_css_demo_1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>basic HTML Template</title>
-        <link rel="stylesheet" href="css/basic_style.css">
+        <link rel="stylesheet" href="css/basic_stye.css">
     </head>
     <body>
         <div>
