--- a/Project/Creating-a-CSS-Menu/css_menu_rollover.html
+++ b/Project/Creating-a-CSS-Menu/css_menu_rollover.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>basic HTML Template</title>
+        <title>CSS Drop-down Menu Demo</title>
         <link rel="stylesheet" href="./css/menu_rollover.css">
     </head>
     <body>
@@ -11,7 +11,7 @@
                 <ul class="menu">
                     <li>Home</li>
                     <li>About</li>
-                    <li>Portfolio</li>
+                    <li>Portfolio
                         <ul class="submenu">
                             <li>Page 1</li>
                             <li>Page 2</li>
