Finalized Affecting images css, corrected html
added div container to html

--- a/Affecting-images-with-CSS/photo-package.html
+++ b/Affecting-images-with-CSS/photo-package.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <!-- PHOTO CONTAINER 1 -->
-        <div class="photo">
-            <img src="./images/thumbnail_1.jpeg" alt="">
-            <div class="photo-overlay">
-                <h3 class="white-head">Click to Enlarge</h3>
-                <p>Mt. Rainier</p>
+        <div class="photo-container">
+            <div class="photo">
+                <img src="./images/thumbnail_1.jpeg" alt="">
+                <div class="photo-overlay">
+                    <h3 class="white-head">Click to Enlarge</h3>
+                    <p>This is a photo of Mt. Rainier</p>
+                </div>
             </div>
         </div>
         <!-- END PHOTO CONTAINER -->
