--- a/Basic_HTML_and_CSS/Website_1_project/index.html
+++ b/Basic_HTML_and_CSS/Website_1_project/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cascades</title>  
+        <title>Cascades</title>
+        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="">
     </head>
     <body>
         <!-- NAV -->
-        <div>
-            <div>
-                <ul>
+        <div class="wrap">
+            <div class="menu-container">
+                <ul class="menu">
                     <a href="#home" id="link"><li>HOME</li></a>
                     <a href="#gallery"><li>GALLERY</li></a>
                     <a href="#contact"><li>RESERVATIONS</li></a>
@@ -19,9 +21,9 @@
 
         <!-- HOME -->
         <div id="home">
-            <div>
-                <div>
-                    <span>Cascade Peaks</span>
+            <div class="container">
+                <div class="text-center">
+                    <span class="head-main">Cascade Peaks</span>
                 </div>
             </div>
         </div>
@@ -29,130 +31,134 @@
 
         <!-- GALLERY -->
         <div id="gallery">
-            <h1>Gallery</h1>
-            <div>
-                <!-- PHOTO CONTAINER 1-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_1.jpeg" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+            <div class="container">
+                <h1>Gallery</h1>
+                <div class="flex-container">
+
+                    <!-- PHOTO CONTAINER 1-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_1.jpeg" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 1-->
+                    <!--END PHOTO CONTAINER 1-->
 
-                <!-- PHOTO CONTAINER 2-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_2.jfif" width="100" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 2-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_2.jfif" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 2-->
-
-                <!-- PHOTO CONTAINER 3-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_3.jfif" width="100" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!--END PHOTO CONTAINER 2-->
+                    
+                    <!-- PHOTO CONTAINER 3-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_3.jfif" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 3-->
+                    <!--END PHOTO CONTAINER 3-->
 
-                <!-- PHOTO CONTAINER 4-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_4.jfif" width="100" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 4-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_4.jfif" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 4-->
+                    <!--END PHOTO CONTAINER 4-->
 
-                <!-- PHOTO CONTAINER 5-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_5.jfif" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 5-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_5.jpeg" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 5-->
+                    <!--END PHOTO CONTAINER 5-->
 
-                <!-- PHOTO CONTAINER 6-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_6.jfif" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 6-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_6.jpeg" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 6-->
+                    <!--END PHOTO CONTAINER 6-->
 
-                <!-- PHOTO CONTAINER 7-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_7.jfif" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 7-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_7.jpeg" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 7-->
+                    <!--END PHOTO CONTAINER 7-->
 
-                <!-- PHOTO CONTAINER 8-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_8.jfif" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 8-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_8.jpeg" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 8-->
+                    <!--END PHOTO CONTAINER 8-->
 
-                <!-- PHOTO CONTAINER 9-->
-                <div class="photo-container">
-                    <div class="photo">
-                        <img src="./images/thumb/thumbnail_9.jfif" alt="mountain"> 
-                        <div class="photo-overlay">
-                            <h3 class="white-head">Click to Enlarge</h3>
-                            <p>PNW Peaks</p>
+                    <!-- PHOTO CONTAINER 9-->
+                    <div class="photo-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_9.jpeg" alt="mountain"> 
+                            <div class="photo-overlay">
+                                <h3>Click to Enlarge</h3>
+                                <p>PNW Peaks</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!--END PHOTO CONTAINER 9-->
+                    <!--END PHOTO CONTAINER 9-->
 
+                </div>
             </div>
         </div>
         <!-- END GALLERY -->
 
         <!-- CONTACT -->
-        <div id="contact">
-            <div>
-                <div>
+        <section id="contact">
 
-                </div>
-            </div>
-        </div>
+        </section>
         <!-- END CONTACT -->
 
+        <!-- FOOTER -->
+        <div id="contact">
+            
+        </div>
+        <!-- END FOOTER -->
 
     </body>
 </html>
