Updated RSVP Section

--- a/Basic_HTML_and_CSS/Website_1_project/index.html
+++ b/Basic_HTML_and_CSS/Website_1_project/index.html
@@ -150,13 +150,38 @@
 
         <!-- CONTACT -->
         <section id="contact">
-
+            <div class="container">
+                <div class="heading-padding">
+                    <h1 class="heading-padding">Reservations</h1>
+                    <div class="reservation">
+                        <h2><span>Reserve your spot to walk uphill!</span>
+                        </h2>
+                        <p class="rsvp-text">
+                            Please provide us with your basic contact information.
+                        </p>
+                        <div class="form-rsvp">
+                            <form action="" method="post">
+                                <input class="rsvp" type="text" value="" placeholder="First Name">
+                                <input class="rsvp" type="text" value="" placeholder="Last Name">
+                                <input class="rsvp" type="text" value="" placeholder="Email Address">
+                                <input class="rsvp" type="text" value="" placeholder="Phone Number">
+                            </form>
+                            <div class="form-spacer">
+                                <label class="terms">Terms and Conditions</label>
+                            </div>
+                            <div class="submit">
+                                <input type="submit" value="Submit">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- END CONTACT -->
 
         <!-- FOOTER -->
-        <div id="contact">
-            
+        <div id="footer">
+            www.cascadepeaks.com &nbsp; | &nbsp; &copy; 2016
         </div>
         <!-- END FOOTER -->
 
