Updated index.html and 2 css files

--- a/Basic_HTML_and_CSS/Website_1_project/index.html
+++ b/Basic_HTML_and_CSS/Website_1_project/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Cascades</title>
-        <link rel="stylesheet" href="">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./css/shared.css">
+        <link rel="stylesheet" href="./css/animations.css">
     </head>
     <body>
         <!-- NAV -->
@@ -86,7 +86,7 @@
                     <!-- PHOTO CONTAINER 5-->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./images/thumb/thumbnail_5.jpeg" alt="mountain"> 
+                            <img src="./images/thumb/thumbnail_5.jfif" alt="mountain"> 
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>PNW Peaks</p>
@@ -98,7 +98,7 @@
                     <!-- PHOTO CONTAINER 6-->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./images/thumb/thumbnail_6.jpeg" alt="mountain"> 
+                            <img src="./images/thumb/thumbnail_6.jfif" alt="mountain"> 
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>PNW Peaks</p>
@@ -110,7 +110,7 @@
                     <!-- PHOTO CONTAINER 7-->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./images/thumb/thumbnail_7.jpeg" alt="mountain"> 
+                            <img src="./images/thumb/thumbnail_7.jfif" alt="mountain"> 
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>PNW Peaks</p>
@@ -122,7 +122,7 @@
                     <!-- PHOTO CONTAINER 8-->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./images/thumb/thumbnail_8.jpeg" alt="mountain"> 
+                            <img src="./images/thumb/thumbnail_8.jfif" alt="mountain"> 
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>PNW Peaks</p>
@@ -134,7 +134,7 @@
                     <!-- PHOTO CONTAINER 9-->
                     <div class="photo-container">
                         <div class="photo">
-                            <img src="./images/thumb/thumbnail_9.jpeg" alt="mountain"> 
+                            <img src="./images/thumb/thumbnail_9.jfif" alt="mountain"> 
                             <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>PNW Peaks</p>
@@ -154,7 +154,8 @@
                 <div class="heading-padding">
                     <h1 class="heading-padding">Reservations</h1>
                     <div class="reservation">
-                        <h2><span>Reserve your spot to walk uphill!</span>
+                        <h2><span>These are some of the Cascade Peaks!</span>
+                            <br/>
                         </h2>
                         <p class="rsvp-text">
                             Please provide us with your basic contact information.
@@ -165,13 +166,13 @@
                                 <input class="rsvp" type="text" value="" placeholder="Last Name">
                                 <input class="rsvp" type="text" value="" placeholder="Email Address">
                                 <input class="rsvp" type="text" value="" placeholder="Phone Number">
+                                <div class="form-spacer">
+                                    <label class="terms">Terms and Conditions</label>
+                                </div>
+                                <div class="submit">
+                                    <input type="submit" value="Submit">
+                                </div>
                             </form>
-                            <div class="form-spacer">
-                                <label class="terms">Terms and Conditions</label>
-                            </div>
-                            <div class="submit">
-                                <input type="submit" value="Submit">
-                            </div>
                         </div>
                     </div>
                 </div>
