Updated reference css file.
Used different image that isn't blocked by secure browser firewall

--- a/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Mt. Hood</title> 
-        <link rel="stylesheet" href="./css/hood.css">
+        <link rel="stylesheet" href="./css/one_page_website.css">
     </head>
     <body>
 
@@ -32,7 +32,7 @@
                 <div class="photo-container">
                     <p>Fall</p>
                     <div class="photo">
-                        <img src="https://www.pacificrimandco.com/assets/client/Image/Mount-Hood-Autumn.jpg" alt="Mount Hood in Fall"> 
+                        <img src="https://images.fineartamerica.com/images-medium-large-5/mt-hood-in-autumn-ed-cooper-photography.jpg" alt="Mount Hood in Fall"> 
                         <div class="photo-overlay">
                             <!-- <h3 class="white-head">Click to </h3> -->
                         </div>
