Added bootstrap cards

--- a/bootstrap4_project/oregon_beaches.html
+++ b/bootstrap4_project/oregon_beaches.html
@@ -45,88 +45,50 @@
         </div>
         <!-- END MAIN HEADER -->
 
-        <!-- COLUMNS -->
-        <div id="About" class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img class="img-fluid" src="./images/oregon-coast.png">
+        <!-- CARDS SECTION  -->
+        <div class="card-deck">
+            <div class="card" style="width: 18rem;">
+                <img src="../bootstrap4_project/images/img.jpg" class="card-img-top" alt="Manzanita beach" height="200">
+                <div class="card-body">
+                    <h5 class="card-title">Manzanita</h5>
+                    <p class="card-text">Manzanita is a beach on the Oregon coast. It has nice shops and a beautiful coastline.</p>
+                    <span class="badge badge-pill badge-info">12:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">1:30 p.m.</span>
+                    <span class="badge badge-pill badge-info">3:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">5:30 p.m.</span>
+                    <span class="badge badge-pill badge-info">7:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">9:30 p.m.</span>
                 </div>
-                <div class="col-sm">
-                    <h3>About the Oregon Coast</h3>
-                    <p>Oregon beaches are located between Washington beaches and California beaches.</p>
-                    <p>They're also located between Oregon and the Pacific Ocean.</p>
-                    <p>Many whales, sea lions, starfish, and otter animals call this region home.</p>
-                    <p>It's only summer for a few days a year, so make sure you bundle up!</p>                                  
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../bootstrap4_project/images/img2.jpg" class="card-img-top" alt="Florence beach" height="200">
+                <div class="card-body">
+                    <h5 class="card-title">Florence</h5>
+                    <p class="card-text">Florence is a beach on the Oregon coast. It has large dunes to drive on.</p>
+                    <span class="badge badge-pill badge-info">12:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">1:30 p.m.</span>
+                    <span class="badge badge-pill badge-info">3:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">5:30 p.m.</span>
+                    <span class="badge badge-pill badge-info">7:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">9:30 p.m.</span>
                 </div>
-                <div class="col-sm">
-                    <h3>Things to do:</h3>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <a class="nav-link" href="#">Walk on the Beach</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="nav-link" href="#">Bike along the Shore</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="nav-link" href="#">Deep Sea Fishing</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="nav-link" href="#">Wildlife Watching</a>
-                        </li>
-                      </ul>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../bootstrap4_project/images/img3.jpg" class="card-img-top" alt="Coos Bay beach" height="200">
+                <div class="card-body">
+                    <h5 class="card-title">Coos Bay</h5>
+                    <p class="card-text">Coos Bay is a beach on the Oregon coast. It has a large fishing and tourism industry.</p>
+                    <span class="badge badge-pill badge-info">12:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">1:30 p.m.</span>
+                    <span class="badge badge-pill badge-info">3:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">5:30 p.m.</span>
+                    <span class="badge badge-pill badge-info">7:00 p.m.</span>
+                    <span class="badge badge-pill badge-info">9:30 p.m.</span>
                 </div>
             </div>
         </div>
-        <!-- END COLUMNS -->
 
-
-        <!-- BEACHES SECTION -->
-        <!-- <div id="Beaches" class="container my-5 text-center">
-            <h3>Three Beaches in Oregon:</h3>
-            <div class="col-md-4 text-center">
-                <div class="row">
-                    <img class="img-fluid" src="./images/img.jpg" height="200" width="300">
-                </div>
-                <div class="row">
-                    <h3>Manzanita</h3>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="row">
-                    <img class="img-fluid" src="./images/img2.jpg" height="200" width="300">
-                </div>
-                <div class="row">
-                    <h3>Florence</h3>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="row">
-                    <img class="img-fluid" src="./images/img3.jpg" height="200" width="300">
-                </div>
-                <div class="row">
-                    <h3>Coos Bay</h3>
-                </div>
-            </div> -->
-
-        <div id="Beaches" class="container my-5 text-center text-primary">
-            <h3>Three Beaches in Oregon:</h3>
-            <div class="row my-2 text-secondary">
-                <div class="col-sm">
-                    <img class="img-fluid" src="./images/img.jpg">
-                    <h3>Manzanita</h3>
-                </div>
-                <div class="col-sm">
-                    <img class="img-fluid" src="./images/img2.jpg">
-                    <h3>Florence</h3>
-                </div>
-                <div class="col-sm">
-                    <img class="img-fluid" src="./images/img3.jpg">
-                    <h3>Coos Bay</h3>
-                </div>
-            </div>
-        </div>
-        <!-- END BEACHES SECTION -->
-
+        <!-- END CARDS SECTION  -->
 
         <!-- FORM SECTION -->
         <div id="Planning"class="text-center">
