Fixed About and Beaches links

--- a/bootstrap4_project/oregon_beaches.html
+++ b/bootstrap4_project/oregon_beaches.html
@@ -45,8 +45,42 @@
         </div>
         <!-- END MAIN HEADER -->
 
+        <!-- COLUMNS -->
+        <div id="About" class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img class="img-fluid" src="./images/oregon-coast.png">
+                </div>
+                <div class="col-sm">
+                    <h3>About the Oregon Coast</h3>
+                    <p>Oregon beaches are located between Washington beaches and California beaches.</p>
+                    <p>They're also located between Oregon and the Pacific Ocean.</p>
+                    <p>Many whales, sea lions, starfish, and otter animals call this region home.</p>
+                    <p>It's only summer for a few days a year, so make sure you bundle up!</p>                                  
+                </div>
+                <div class="col-sm">
+                    <h3>Things to do:</h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a class="nav-link" href="#">Walk on the Beach</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a class="nav-link" href="#">Bike along the Shore</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a class="nav-link" href="#">Deep Sea Fishing</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a class="nav-link" href="#">Wildlife Watching</a>
+                        </li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+        <!-- END COLUMNS -->
+
         <!-- CARDS SECTION  -->
-        <div class="card-deck">
+        <div id="Beaches" class="card-deck my-5">
             <div class="card" style="width: 18rem;">
                 <img src="../bootstrap4_project/images/img.jpg" class="card-img-top" alt="Manzanita beach" height="200">
                 <div class="card-body">
