--- a/portfolio_website/index.html
+++ b/portfolio_website/index.html
@@ -25,26 +25,8 @@
         <!--Background image-->
         <div id="Home">
             <div class="Main_Header">
-                <h1 class="Main_Header_Text">Portfolio of Russell Conine</h1>
+                <h1 class="Main_Header_Text">Russell Conine</h1>
             </div>
-        </div>
-
-        <!--Video text-->
-        <div class="Video_Text">
-            <h2 class="white-text">Your Name's Portfolio</h1>
-            <strong>
-                <p class="center">
-                    <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
-                        <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
-                        <br>field of battle and to command such unswervingly dutiful actors or troops.
-                    </q>
-                    <br> -Joseph Weizenbaum
-                    <br>
-                    <br> My name is ____. Welcome to my portfolio website. On it, I will tell you about my background and experience.
-                    <br>
-                    <br> Thank you for stopping by and enjoy! 
-                </p>
-            </strong>
         </div>
 
         <!--About section-->
