Added additional images. Re-organized image css.

--- a/portfolio_website/index.html
+++ b/portfolio_website/index.html
@@ -23,7 +23,9 @@
         <!--Background image-->
         <div id="Home">
             <div class="Main_Header">
-                <h1 class="Main_Header_Text">Russell Conine</h1>
+                <h1 class="Main_Header_Text">The Portfolio of 
+                    <br>
+                    Russell Conine</h1>
             </div>
         </div>
 
@@ -31,7 +33,7 @@
         <div class="Row" id="About">
             <!--Left column-->
             <div class="Column_2">
-                <img src="./images/russell.JPG" alt="Replace with your own image and description" id="personal_image">
+                <img src="./images/russell.JPG" alt="Replace with your own image and description">
             </div>
             <!--Right column-->
             <div class="Column_1">
@@ -93,7 +95,9 @@
         <div class="Row" id="Contact">
             <!--Contact image, left column-->
             <div class="Column_1 Column_tall">
-                <img src="images/html_custom.png" alt="Contact_Image">
+                <br>
+                <br>
+                <img src="./images/paper_airplane.jpg" alt="Contact_Image">
             </div>
             <!--Contact form, right column-->
             <div class="Column_2 Column_tall">
